config/network-policy/keda_network_policy.yaml
# NetworkPolicy to block any ingress traffic to keda-manager pods
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    control-plane: manager
    purpose: block-ingress
  name: kyma-project.io--keda-manager-block-ingress
  namespace: kyma-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: keda-manager.kyma-project.io
      control-plane: manager
  policyTypes:
  - Ingress
---
# NetworkPolicy to allow egress traffic to the Kubernetes API server
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    control-plane: manager
    purpose: allow-to-apiserver
  name: kyma-project.io--keda-manager-allow-to-apiserver
  namespace: kyma-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: keda-manager.kyma-project.io
      control-plane: manager
  policyTypes:
  - Egress
  egress:
    - ports:
      - port: 443
        protocol: TCP
      - port: 6443
        protocol: TCP
---
# NetworkPolicy to allow egress traffic to DNS servers
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    control-plane: manager
    purpose: allow-to-dns
  name: kyma-project.io--keda-manager-allow-to-dns
  namespace: kyma-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: keda-manager.kyma-project.io
      control-plane: manager
  policyTypes:
  - Egress
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
    - ports:
        - port: 8053
          protocol: UDP
        - port: 8053
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              gardener.cloud/purpose: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              gardener.cloud/purpose: kube-system
          podSelector:
            matchLabels:
              k8s-app: node-local-dns
